@@ -324,7 +324,8 @@ to take effect.')
    @param event: The event that is being handled.
     @type event: L{pyLinAcc.Event}
     '''
-    self.hotkey_manager.hotkeyPress(event.detail2, event.any_data[1])
+    handled = self.hotkey_manager.hotkeyPress(event.detail2, event.any_data[1])
+    event.consume = handled
 
   def _getChildAccAtCoords(self, parent, x, y):
     '''
